data/derived/comb/progs/unify/prog1529.ml.out
Characters 125-127:
  | Sine a           -> sin(pi* eval (a,x,y) )
                            ^^
Error: This expression has type float but an expression was expected of type
         int
